# evil-workspace

./: Cargo.toml  dist-workspace.toml
.github/workflows/: release.yml
many-bin/: Cargo.toml
many-bin/wix/: main.wxs
some-cdylib/: Cargo.toml
some-lib/: Cargo.toml
test-bin/: Cargo.toml
third-bin/: Cargo.toml
third-bin/wix/: main.wxs
wix/: main.wxs
