[package]
name = "evil-workspace"
version = "0.255.0"
edition = "2021"
repository = "https://github.com/mistydemeo/evil-workspace"
description = "pure evil"
license = "MIT"
authors = ["Gankra"]

[package.metadata.wix]
upgrade-guid = "DB21E74E-06C1-47C5-BD95-D1B71B512A5B"
path-guid = "5CF98729-3B58-4F34-9E8E-84734B250E6D"
license = false
eula = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[workspace]
members = ["third-bin", "test-bin", "many-bin", "some-lib", "some-cdylib"]

[workspace.metadata.release]
shared-version = true
tag-name = "v{{version}}"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
